deploy: 184536c68e69967cedcaab6c4dd387f687742039

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		
 
 		<title>Keyboard trainer</title>
-		<script type="module" crossorigin src="/assets/main.c1543eca.js"></script>
-		<link rel="stylesheet" href="/assets/main.860e1599.css">
+		<script type="module" crossorigin src="/keyboard-trainer/assets/main.c1543eca.js"></script>
+		<link rel="stylesheet" href="/keyboard-trainer/assets/main.860e1599.css">
 	</head>
 
 	<body>
